--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	  "version": "1.0.0",
 	  "description": "",
 	  "main": "app.js",
+	"engine":{
+		"node":"*",
+		"npm":"*"
+	},
 	  "scripts": {
 	    "start": "node app.js",
 	    "test": "echo \"Error: no test specified\" && exit 1"
